--- a/index.html
+++ b/index.html
@@ -1,17 +1,10 @@
 <html>
 <body>
 <div>
-    Hello! This is my WebAR Page!
+    <p>외양 묘사 관련 프랑스어 표현 배우기</p>
 </div>
 <div>
-    <p>This is my First Face Tracking Application</p>
-    <p><a href="./4_FLEduClass/1_MyFaceFilter.html">My Face Tracking Application</a></p>
-</div>
-<div>
-    <p>This is my First Image Tracking Application</p>
-    <p><a href="./4_FLEduClass/2_MyImageTracking.html">My Image Tracking Application</a></p>
-    <p>This is my Image Target</p>
-    <p><img src="./4_FLEduClass/Trackable_ImgSets/TargetList (2).png"></p>
+    <a href="./4_FLEduClass/FaceFilterGame/FaceFilterGame.html">Link</a>
 </div>
 </body>
 </html>
